--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "pi-greco",
+  "name": "mirko-custom-form",
   "version": "1.0.0",
   "private": true,
-  "description": "pi-greco",
+  "description": "mirko-custom-form",
   "author": "mirkotorrisi",
   "keywords": [
     "gatsby"
